--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
             <div class="box">
                 <h3>contact us</h3>
                 <p>+123-456-7890</p>
-                <a href="#" class="link">pratik19prajapati@gmail.com</a>
+                <a href="#" class="link">akbariparthik@gmail.com</a>
             </div>
 
             <div class="box">
