--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
             <div class="icons">
                 <i class="fas fa-envelope"></i>
                 <h3>our email</h3>
-                <p><a href="">pratik19prajapati@gmail.com</a></p>
+                <p><a href="">akbariparthik@gmail.com</a></p>
                 
             </div>
 
@@ -163,7 +163,7 @@
         <div class="box">
             <h3>contact us</h3>
             <p>+123-456-7890</p>
-            <a href="#" class="link">pratik19prajapati@gmail.com</a>
+            <a href="#" class="link">akbariparthik@gmail.com</a>
         </div>
 
         <div class="box">
