--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
             <div class="icons">
                 <i class="fas fa-envelope"></i>
                 <h3>our email</h3>
-                <p><a href="">akbariparthik@gmail.com</a></p>
+                <p><a href="">kishankevadiya123@gmail.com</a></p>
                 
             </div>
 
