--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
         <div class="box">
             <h3>contact us</h3>
             <p>+123-456-7890</p>
-            <a href="#" class="link">akbariparthik@gmail.com</a>
+            <a href="#" class="link">kishankevadiya123@gmail.com</a>
         </div>
 
         <div class="box">
