--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
         </div>
 
     </div>
-    <div class="credit">created by <span>Pratik</span> | all rights reserved!</div>
+    <div class="credit">created by <span>kishan</span> | all rights reserved!</div>
 
 </section>
 
