--- a/gallery.html
+++ b/gallery.html
@@ -169,7 +169,7 @@
         <div class="box">
             <h3>contact us</h3>
             <p>+123-456-7890</p>
-            <a href="#" class="link">akbariparthik@gmail.com</a>
+            <a href="#" class="link">kishankevadiya123@gmail.com</a>
         </div>
 
         <div class="box">
@@ -178,7 +178,7 @@
         </div>
 
     </div>
-    <div class="credit">created by <span>Pratik</span> | all rights reserved!</div>
+    <div class="credit">created by <span>kishan</span> | all rights reserved!</div>
 
 </section>
 
